# frag-console

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: config.py  init_assets.py  init_connectors.py  load_beir.py  retrieve.py
src/apis/: assets.py  connectors.py  dataspace.py  qdrant.py
src/experiments/: config.py  deploy.py  deploy.sh  evaluate.py  initialize.py  retrieve.py
src/experiments/common/: evaluate.py  params.py  retrieve.py  save.py
src/experiments/exp1/: evaluate.py  frag.py
src/experiments/exp_authz/: config.py  evaluate.py  frag.py
src/experiments/exp_basic/: baseline.py  config.py  evaluate.py  frag.py
src/experiments/exp_scalability/: baseline.py  config.py  frag.py
src/experiments/scripts/: delete_beir_collections.py  shuffle_beir_collections.py  split_beir_collections.py
src/experiments/setup/: generate_clients.py  generate_compose.py  generate_envs.py  initialize.py  setup.py
src/utils/: http_request.py
